k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grbac
  labels:
    app.kubernetes.io/name: grbac
