k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grbac-api
  namespace: grbac
  labels:
    app: grbac
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: grbac
